[gd_scene load_steps=7 format=3 uid="uid://fydoeusyggh7"]

[ext_resource type="Script" path="res://src/modules/local_video/gallery/video_gallery_panel.gd" id="1_pkvf1"]
[ext_resource type="Texture2D" uid="uid://dx7dk0bfvldes" path="res://assets/icon/search_32.png" id="2_bq43e"]
[ext_resource type="PackedScene" uid="uid://cvdq74aj46fv8" path="res://src/modules/local_video/gallery/video_gallery_item.tscn" id="3_hvf3j"]
[ext_resource type="Texture2D" uid="uid://byvceqj0cxf1n" path="res://assets/icon/sort_32.png" id="3_uxj14"]
[ext_resource type="PackedScene" uid="uid://cxdjx58hokua" path="res://src/modules/local_video/gallery/video_gallery_tab.tscn" id="4_gg82m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f8uvx"]
content_margin_left = 30.0
content_margin_top = 5.0
content_margin_bottom = 5.0

[node name="VideoGalleryPanel" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_pkvf1")

[node name="SearchMargin" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="H" type="HBoxContainer" parent="SearchMargin"]
layout_mode = 2

[node name="SearchLineEdit" type="LineEdit" parent="SearchMargin/H"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_f8uvx")
placeholder_text = "搜索"
clear_button_enabled = true
flat = true

[node name="SearchButton" type="Button" parent="SearchMargin/H/SearchLineEdit"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 4.0
offset_top = -10.0
offset_right = 24.0
offset_bottom = 10.0
grow_vertical = 2
icon = ExtResource("2_bq43e")
alignment = 0
expand_icon = true

[node name="CreateButton" type="Button" parent="SearchMargin/H"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 8
theme_type_variation = &"AddButton"
text = "新建
"
expand_icon = true

[node name="FunctionMargin" type="MarginContainer" parent="."]
layout_mode = 2

[node name="H" type="HBoxContainer" parent="FunctionMargin"]
layout_mode = 2

[node name="Button" type="Button" parent="FunctionMargin/H"]
custom_minimum_size = Vector2(28, 28)
layout_mode = 2
text = "
"
icon = ExtResource("3_uxj14")
icon_alignment = 1
expand_icon = true

[node name="CheckButton" type="CheckButton" parent="FunctionMargin/H"]
layout_mode = 2
text = "平铺 
"
alignment = 1

[node name="NumberLabel" type="Label" parent="FunctionMargin/H"]
layout_mode = 2
size_flags_horizontal = 10
text = "12/12"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="V" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="VideoGalleryItem" parent="ScrollContainer/V" instance=ExtResource("3_hvf3j")]
layout_mode = 2

[node name="VideoGalleryItem2" parent="ScrollContainer/V" instance=ExtResource("3_hvf3j")]
layout_mode = 2

[node name="VideoGalleryItem3" parent="ScrollContainer/V" instance=ExtResource("3_hvf3j")]
layout_mode = 2

[node name="VideoGalleryItem4" parent="ScrollContainer/V" instance=ExtResource("3_hvf3j")]
layout_mode = 2

[node name="VideoGalleryItem5" parent="ScrollContainer/V" instance=ExtResource("3_hvf3j")]
layout_mode = 2

[node name="VideoGalleryItem6" parent="ScrollContainer/V" instance=ExtResource("3_hvf3j")]
layout_mode = 2

[node name="VideoGalleryItem7" parent="ScrollContainer/V" instance=ExtResource("3_hvf3j")]
layout_mode = 2

[node name="VideoGalleryItem8" parent="ScrollContainer/V" instance=ExtResource("3_hvf3j")]
layout_mode = 2

[node name="VideoGalleryItem9" parent="ScrollContainer/V" instance=ExtResource("3_hvf3j")]
layout_mode = 2

[node name="VideoGalleryItem10" parent="ScrollContainer/V" instance=ExtResource("3_hvf3j")]
layout_mode = 2

[node name="VideoGalleryItem11" parent="ScrollContainer/V" instance=ExtResource("3_hvf3j")]
layout_mode = 2

[node name="VideoGalleryItem12" parent="ScrollContainer/V" instance=ExtResource("3_hvf3j")]
layout_mode = 2

[node name="VideoGalleryItem13" parent="ScrollContainer/V" instance=ExtResource("3_hvf3j")]
layout_mode = 2

[node name="VideoGalleryItem14" parent="ScrollContainer/V" instance=ExtResource("3_hvf3j")]
layout_mode = 2

[node name="VideoGalleryItem15" parent="ScrollContainer/V" instance=ExtResource("3_hvf3j")]
layout_mode = 2

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
initial_position = 1

[node name="VideoGalleryTab" parent="." instance=ExtResource("4_gg82m")]
visible = false
